test/type_errors/cases/ppx_result_nonstring.ml
let x = [%eta.result name (Ok 1)]
